// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils - questions entityPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an entity",
    "selectType": "dynamic",
  },
  "message": "entity",
  "name": "buildingBlockData.metaPath.entitySet",
  "type": "list",
}
`;

exports[`utils - questions entityPrompt 2`] = `
Array [
  Object {
    "name": "C_CustomerBankDetailsOP",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_CustomerBankDetailsOP",
  },
  Object {
    "name": "C_CustomerCompanyCodeOP",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_CustomerCompanyCodeOP",
  },
  Object {
    "name": "C_CustomerOP",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_CustomerOP",
  },
  Object {
    "name": "C_CustomerSalesAreaOP",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_CustomerSalesAreaOP",
  },
  Object {
    "name": "C_Custrecnclnacctvhtemp",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_Custrecnclnacctvhtemp",
  },
  Object {
    "name": "C_OrderIsBlockedTextVHTemp",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/C_OrderIsBlockedTextVHTemp",
  },
  Object {
    "name": "I_AccountingClerk",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_AccountingClerk",
  },
  Object {
    "name": "I_AccountingClerkStdVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_AccountingClerkStdVH",
  },
  Object {
    "name": "I_BillingBlockReason",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_BillingBlockReason",
  },
  Object {
    "name": "I_BusinessPartnerVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_BusinessPartnerVH",
  },
  Object {
    "name": "I_ChartOfAccountsStdVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_ChartOfAccountsStdVH",
  },
  Object {
    "name": "I_CompanyCode",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CompanyCode",
  },
  Object {
    "name": "I_CompanyCodeStdVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CompanyCodeStdVH",
  },
  Object {
    "name": "I_ContactPersonDepartmentT",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_ContactPersonDepartmentT",
  },
  Object {
    "name": "I_ContactPersonFunctionT",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_ContactPersonFunctionT",
  },
  Object {
    "name": "I_ControllingAreaStdVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_ControllingAreaStdVH",
  },
  Object {
    "name": "I_Country",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_Country",
  },
  Object {
    "name": "I_CreditControlAreaStdVH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CreditControlAreaStdVH",
  },
  Object {
    "name": "I_Customer_to_BusinessPartner",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_Customer_to_BusinessPartner",
  },
  Object {
    "name": "I_Customer_VH",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_Customer_VH",
  },
  Object {
    "name": "I_CustomerContactOP",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CustomerContactOP",
  },
  Object {
    "name": "I_CustomerDunning",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CustomerDunning",
  },
  Object {
    "name": "I_CustomerGroup",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_CustomerGroup",
  },
  Object {
    "name": "I_DeliveryBlockReason",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_DeliveryBlockReason",
  },
  Object {
    "name": "I_DistributionChannel",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_DistributionChannel",
  },
  Object {
    "name": "I_Division",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_Division",
  },
  Object {
    "name": "I_PaymentBlockingReason",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_PaymentBlockingReason",
  },
  Object {
    "name": "I_SalesGroup",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_SalesGroup",
  },
  Object {
    "name": "I_SalesOffice",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_SalesOffice",
  },
  Object {
    "name": "I_SalesOrganization",
    "value": "C_CUSTOMER_OP_SRV.C_CUSTOMER_OP_SRV_Entities/I_SalesOrganization",
  },
]
`;

exports[`utils - questions getAggregationPathPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an aggregation path",
    "selectType": "dynamic",
  },
  "message": "AggregationPathMessage",
  "name": "aggregationPath",
  "type": "list",
}
`;

exports[`utils - questions getAggregationPathPrompt 2`] = `
Array [
  Object {
    "name": "/mvc:View",
    "value": "/mvc:View",
  },
  Object {
    "name": "/mvc:View/Page",
    "value": "/mvc:View/*[local-name()='Page']",
  },
  Object {
    "name": "/mvc:View/Page/content",
    "value": "/mvc:View/*[local-name()='Page']/*[local-name()='content']",
  },
]
`;

exports[`utils - questions getAggregationPathPrompt 3`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an aggregation path",
    "selectType": "dynamic",
  },
  "name": "aggregationPath",
  "type": "list",
}
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "selectType": "dynamic",
  },
  "message": "testMessage",
  "name": "buildingBlockData.metaPath.qualifier",
  "type": "list",
}
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 2`] = `
Array [
  Object {
    "name": "@UI.LineItem",
    "value": "@com.sap.vocabularies.UI.v1.LineItem",
  },
]
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 3`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "selectType": "dynamic",
  },
  "name": "buildingBlockData.metaPath.qualifier",
  "type": "list",
}
`;

exports[`utils - questions getBindingContextType 1`] = `
Object {
  "choices": Array [
    Object {
      "name": "Relative",
      "value": "relative",
    },
    Object {
      "name": "Absolute",
      "value": "absolute",
    },
  ],
  "guiOptions": Object {
    "dependantPromptNames": Array [
      "buildingBlockData.metaPath.qualifier",
    ],
    "selectType": "static",
  },
  "message": "bindingContext",
  "name": "buildingBlockData.metaPath.bindingContextType",
  "type": "list",
}
`;

exports[`utils - questions getBindingContextType 2`] = `
Object {
  "choices": Array [
    Object {
      "name": "Relative",
      "value": "relative",
    },
    Object {
      "name": "Absolute",
      "value": "absolute",
    },
  ],
  "guiOptions": Object {
    "selectType": "static",
  },
  "name": "buildingBlockData.metaPath.bindingContextType",
  "type": "list",
}
`;

exports[`utils - questions getViewOrFragmentPathPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "dependantPromptNames": Array [
      "aggregationPath",
    ],
    "placeholder": "Select a view or fragment file",
    "selectType": "dynamic",
  },
  "message": "testMessage",
  "name": "viewOrFragmentPath",
  "type": "list",
  "validate": [Function],
}
`;

exports[`utils - questions getViewOrFragmentPathPrompt 2`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select a view or fragment file",
    "selectType": "dynamic",
  },
  "name": "viewOrFragmentPath",
  "type": "list",
  "validate": [Function],
}
`;
